# telnoti

./: .gitignore  README.md  pyproject.toml  test.ipynb
.github/workflows/: ci.yml  publish.yml
telnoti/: __init__.py  bot.py  cli.py  config.py  core.py  decorators.py  runs.py  status.py
tests/: test_enable_disable.py  test_list_command.py
