[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "telnoti"
dynamic = ["version"]
description = "Send Telegram notifications from Python scripts and notebooks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Linfeng Wang"}]
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "flit"]

[project.scripts]
telnoti = "telnoti.cli:main"

[project.urls]
Homepage = "https://github.com/linfeng-wang/telnoti"
Repository = "https://github.com/linfeng-wang/telnoti"

[tool.pytest.ini_options]
testpaths = ["tests"]
